--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录至神经网络-本地</title>
 </head>
-<body  background="../img/98755398_p0.png">
-    <p><img src="..\img\p.png"width=100px align="right"></img>
+<body  background="img/98755398_p0.png">
+    <p><img src="img/p.png"width=100px align="right"></img>
 
         <ul text-align="left">
 <li style="color: rgb(255, 185, 7);"><a class="is" href="http://127.0.0.1:5500/work.html">返回I实验室-尘影余音</a></li>
