--- a/work.html
+++ b/work.html
@@ -8,8 +8,7 @@
         </title>
         <meta>
     </head>
-    <body
-    background="img/w.png">
+    <body>
         <p style="text-align:center;color:rgb(236, 132, 13);font-size:30px">
 <img src="img/wwwwww.png"><img src="img/p.png
 " width=100px align="right"></p>
