--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <li style="color: rgb(255, 185, 7);"><a class="is" href="http://127.0.0.1:5500/work.html">返回I实验室-尘影余音</a></li>
 <li style="color:tan"><a class="isss" href="https://github.com/">前往外部链接-github</a></li>
 <li style="color: aqua"><a class="iss" href="https://i0.hdslb.com/bfs/new_dyn/724ab7b80492d31530728e42e45ad809161775300.jpg@1554w.webp">前往外部图片-象限解构</a></li>
-<li style="color: rgb(158, 158, 158)"><a style="color: rgb(150, 152, 152)" href ="http://127.0.0.1:5500/toool.html#ji">寄咯</a></li>
+<li style="color: rgb(158, 158, 158)"><a style="color: rgb(150, 152, 152)" href ="http://127.0.0.1:5500/tool.html#ji">寄咯</a></li>
     </ul>
     
 <ol>
