--- a/work.html
+++ b/work.html
@@ -1,14 +1,14 @@
 <! DOCTYPE html>
 <html>
     <head>
-        <link rel="shortcut icon" href="img/p.ico">
+        <link rel="shortcut icon" href="img\p.ico">
         <link rel="stylesheet" href="css/style1.css">
         <title>
     独奏
         </title>
         <meta>
     </head>
-    <body background="img/w.png">
+    <body background="img\w.png">
         <p style="text-align:center;color:rgb(236, 132, 13);font-size:30px">
 <img src="img/wwwwww.png"><img src="img/p.png
 " width=100px align="right"></p>
