--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="shortcut icon" href="p.ico">
-        <link rel="stylesheet" href="../css/style1.css">
+        <link rel="stylesheet" href="css/style1.css">
         <title>
     独奏
         </title>
